[package]
name = "sp_price_feed"
version = "0.1.0"
authors = ["Kenndrick"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
schema = []
default = []

[dependencies]
schemars = { version = "0.8.11" }
simd-json = { version = "0.13.10", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0" }
cosmwasm-schema = "2.0.2"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
getset = "0.1"

sp-secret-toolkit = { git = "ssh://git@github.com/SatoshisPalace/SP-Secret-Toolkit.git", branch = "reclaim-adjustments", features = [
	"macros",
	"reclaim",
] }

# Uncomment these for some common extra tools
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", version = "0.10.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
